--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,6 @@ Repository = "https://github.com/bytedance/ComfyUI_InfiniteYou"
 #  Used by Comfy Registry https://comfyregistry.org
 
 [tool.comfy]
-PublisherId = ""
+PublisherId = "yuminjia"
 DisplayName = "ComfyUI_InfiniteYou"
 Icon = ""
